libquicktime-1.2.4-i486-1_microlinux.txz: Added.
mjpegtools-2.1.0-i486-1_microlinux.txz: Added.
transcode-1.1.7-i486-1_microlinux.txz: Added.
dirac-1.0.2-i486-1_microlinux.txz: Added.
libcuefile-r475-i486-1_microlinux.txz: Added.
libreplaygain-r475-i486-1_microlinux.txz: Added.
musepack-tools-r475-i486-1_microlinux.txz: Added.
libdca-0.0.5-i486-1_microlinux.txz: Added.
MPlayer-1.1.1-i486-1_microlinux.txz: Added.
mplayer-codecs-20110131-i486-1_microlinux.txz: Added.
+---------------------------+
Sat Nov 30 19:56:17 CET 2013
libilbc-20131002-i486-1_microlinux.txz: Added.
openjpeg-1.5.1-i486-1_microlinux.txz: Added.
ladspa_sdk-1.13-i486-4_microlinux.txz: Added.
libmodplug-0.8.8.4-i486-1_microlinux.txz: Added.
OpenAL-1.15.1-i486-1_microlinux.txz: Added.
opencore-amr-0.1.3-i486-1_microlinux.txz: Added.
opus-1.0.3-i486-1_microlinux.txz: Added.
rtmpdump-20131007_a9f353c-i486-1_microlinux.txz: Added.
orc-0.4.18-i486-1_microlinux.txz: Added.
schroedinger-1.0.11-i486-1_microlinux.txz: Added.
speex-1.2rc1-i486-1_microlinux.txz: Added.
twolame-0.3.13-i486-1_microlinux.txz: Added.
libvpx-1.2.0-i486-1_microlinux.txz: Added.
xvidcore-1.3.2-i486-1_microlinux.txz: Added.
ffmpeg-2.1-i686_custom-1_microlinux.txz: Added.
+---------------------------+
Sat Nov 30 12:20:58 CET 2013
sbopkg-0.36.0-noarch-1_microlinux.txz: Added.
recode-3.6-i486-1_microlinux.txz: Added.
cdlabelgen-4.3.0-noarch-1_microlinux.txz: Added.
p7zip-9.20.1-i486-1_microlinux.txz: Added.
unrar-5.0.13-i486-1_microlinux.txz: Added.
lame-3.99.5-i486-1_microlinux.txz: Added.
x264-20131101-i486-1_microlinux.txz: Added.
enca-1.15-i486-1_microlinux.txz: Added.
libass-0.10.2-i486-1_microlinux.txz: Added.
libaacs-0.6.0-i486-1_microlinux.txz: Added.
libbluray-0.4.0-i486-1_microlinux.txz: Added.
celt-0.11.3-i486-1_microlinux.txz: Added.
libdc1394-2.2.1-i486-1_microlinux.txz: Added.
libmp4v2-2.0.0-i486-1_microlinux.txz: Added.
faac-1.28-i486-2_microlinux.txz: Added.
frei0r-1.4-i486-1_microlinux.txz: Added.