@@ -47,6 +47,8 @@ musepack-tools
 libdca
 MPlayer
 mplayer-codecs
+jdk
+flashplayer-plugin
 
 
 
