@@ -1,0 +1,98 @@
+#!/bin/sh
+
+# Copyright 2010-2013  Robby Workman, Northport, Alabama, USA
+# All rights reserved.
+#
+# Redistribution and use of this script, with or without modification, is
+# permitted provided that the following conditions are met:
+#
+# 1. Redistributions of this script must retain the above copyright
+#    notice, this list of conditions and the following disclaimer.
+#
+#  THIS SOFTWARE IS PROVIDED BY THE AUTHOR "AS IS" AND ANY EXPRESS OR IMPLIED
+#  WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF
+#  MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.  IN NO
+#  EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
+#  SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
+#  PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
+#  OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
+#  WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
+#  OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
+#  ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+#
+# Modified by Niki Kovacs <info@microlinux.fr>
+
+PRGNAM=flashplayer-plugin
+VERSION=${VERSION:-11.2.202.327}
+BUILD=${BUILD:-1}
+TAG=${TAG:-_microlinux}
+VERS_MAJ=$(printf $VERSION | cut -d. -f1)
+URL="fpdownload.macromedia.com/get/flashplayer/pdc"
+
+case "$( uname -m )" in
+  i?86) ARCH=i386 ;;
+  arm*) ARCH=arm ;;
+     *) ARCH=$( uname -m ) ;;
+esac
+
+if [ "$ARCH" = "x86_64" ]; then
+  LIBDIRSUFFIX="64"
+elif [ "$ARCH" = "i386" ]; then
+  LIBDIRSUFFIX=""
+else
+  printf "\n\n$ARCH is unsupported...\n"
+  exit 1
+fi
+
+CWD=$(pwd)
+TMP=${TMP:-/tmp/microlinux}
+PKG=$TMP/package-$PRGNAM
+OUTPUT=${OUTPUT:-/tmp}
+
+set -e
+
+if [ ! -r install_flash_player_${VERS_MAJ}_linux.${ARCH}.tar.gz ] ; then
+   wget -c https://$URL/$VERSION/install_flash_player_${VERS_MAJ}_linux.${ARCH}.tar.gz
+fi
+
+md5sum -c install_flash_player_${VERS_MAJ}_linux.${ARCH}.tar.gz.md5
+
+rm -rf $PKG
+mkdir -p $TMP $PKG $OUTPUT
+cd $TMP
+
+tar xf $CWD/install_flash_player_${VERS_MAJ}_linux.${ARCH}.tar.gz -C $PKG
+
+if ! strings $PKG/libflashplayer.so | grep -wq "^${VERSION}$" 2>/dev/null ; then
+  printf "\n\tThis script is written for version $VERSION of the plugin,\n"
+  printf "\tbut you don't seem to have that version.  This is likely\n"
+  printf "\tokay, and it's almost surely not your fault - Adobe tends\n"
+  printf "\tto release new tarballs without changing the name.\n\n"
+  sleep 10
+fi
+
+mkdir -p $PKG/usr/lib${LIBDIRSUFFIX}/mozilla/plugins
+mv $PKG/libflashplayer.so $PKG/usr/lib${LIBDIRSUFFIX}/mozilla/plugins
+
+if [ "$ARCH" = "x86_64" ]; then
+  rm -rf $PKG/usr/lib
+fi
+
+mkdir -p $PKG/usr/doc/$PRGNAM-$VERSION
+mv $PKG/readme.txt $PKG/usr/doc/$PRGNAM-$VERSION
+cat $CWD/$PRGNAM.SlackBuild > $PKG/usr/doc/$PRGNAM-$VERSION/$PRGNAM.SlackBuild
+
+mkdir -p $PKG/install
+cat $CWD/slack-desc > $PKG/install/slack-desc
+cat $CWD/doinst.sh > $PKG/install/doinst.sh
+
+cd $PKG
+chown -R root:root $PKG
+chmod -R g-w $PKG
+find $PKG -type f -name "*.so" -exec chmod 0755 {} \;
+
+/sbin/makepkg -l y -c n -p $OUTPUT/$PRGNAM-$VERSION-$ARCH-$BUILD$TAG.${PKGTYPE:-txz}
+
+# Cleanup
+cd $TMP
+rm -rf $PKG
