@@ -1,0 +1,2 @@
+jdk-*-linux-i586.tar.gz
+jdk-*-linux-x64.tar.gz
