@@ -1,0 +1,17 @@
+This is a SlackBuild that will repackage Oracle Java into a package that
+can be easily installed, upgraded, or removed using Slackware's native
+package management tools.
+
+To use it, you'll need Oracle's JDK or JRE package for Linux.  Get the
+appropriate version for your architecture, either 32-bit i586 or 64-bit
+x64.  Be sure to get the version that is packaged as a .tar.gz!
+
+Then, run the script like this:
+
+./java.SlackBuild /tmp/jre-7u5-linux-x64.tar.gz
+
+A Slackware txz package will be created in /tmp.  Install or upgrade it
+with a command like this one (adjust for jdk or jre, arch, and version):
+
+upgradepkg --install-new jre-7u5-x86_64-1.txz
+
