@@ -1,0 +1,10 @@
+Download JDK
+------------
+
+http://www.oracle.com > Downloads > Java For Developers > JDK
+
+  [*] Accept License Agreement
+
+  * jdk-7uXY-linux-i586.tar.gz (32-bit)
+  * jdk-7uXY-linux-x64.tar.gz  (64-bit)
+
